--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 authors = ["Chris West (Faux) <git@goeswhere.com>"]
+description = "Faux' apt package manager for Debian"
+license = "CC0"
 name = "error-chain-for-dumb-ides"
+readme = "README.md"
+repository = "https://github.com/FauxFaux/error-chain-for-dumb-ides"
 version = "0.1.0"
+
+[badges.travis-ci]
+repository = "FauxFaux/error-chain-for-dumb-ides"
 
 [dependencies]
