--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Chris West (Faux) <git@goeswhere.com>"]
 description = "Faux' apt package manager for Debian"
-license = "CC0"
+license = "CC0-1.0"
 name = "error-chain-for-dumb-ides"
 readme = "README.md"
 repository = "https://github.com/FauxFaux/error-chain-for-dumb-ides"
